k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-frontend
  namespace: expense-ai
spec:
  replicas: 3
  selector:
    matchLabels:
      app: expense-frontend
  template:
    metadata:
      labels:
        app: expense-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: web
          image: ghcr.io/iamamanul/expense-ai:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
